--- a/DDRescue/Pkg.yml
+++ b/DDRescue/Pkg.yml
@@ -1,3 +1,4 @@
 prime: https://github.com/hamishmb
 
-ppa: https://launchpad.net/~hamishmb/+archive/ubuntu/myppa
+ppa-stable: https://launchpad.net/~hamishmb/+archive/ubuntu/myppa
+ppa-testing: https://launchpad.net/~hamishmb/+archive/ubuntu/unstabletesting
